javaDSL/src/test/resources/typeSystemTestModels/valid/methods/MethodHiding.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.methods;

public class MethodHiding extends MethodBodyAbsenceAndPresence{

  public static String getString2(){
    return  "Hello";
  }
}
