javaDSL/src/test/resources/typeSystemTestModels/invalid/methods/MethodHiding.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.methods;

public class MethodHiding extends AbstractMethodDefinition {

  public static String getString(){
    return "String";
  }

}
